[package]
name = "metasearch"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4.0.0"
async-stream = "0.3.5"
axum = { version = "0.7.5", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
    "query",
    "json",
    "form",
] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
chrono-tz = { version = "0.9.0", features = ["case-insensitive"] }
eyre = "0.6.12"
fend-core = "1.4.9"
futures = "0.3.30"
html-escape = "0.2.13"
maud = "0.26.0"
numbat = "1.12.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "deflate",
    "brotli",
] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
# preserve_order is needed for google images. yippee!
serde_json = { version = "1.0.119", features = ["preserve_order"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
tokio-stream = "0.1.15"
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
urlencoding = "2.1.3"
