[package]
name = "metasearch"
version = "0.2.4"
edition = "2021"
build = "src/build.rs"
description = "a cute metasearch engine"
license = "CC0-1.0"
repository = "https://github.com/mat-1/metasearch2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4.1.0"
async-stream = "0.3.6"
axum = { version = "0.8.4", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
    "query",
    "json",
    "form",
] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
chrono-tz = { version = "0.10.3", features = ["case-insensitive"] }
eyre = "0.6.12"
fend-core = "1.5.6"
futures = "0.3.31"
html-escape = "0.2.13"
maud = "0.27.0"
numbat = "1.16.0"
parking_lot = "0.12.4"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "deflate",
    "brotli",
] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
# preserve_order is needed for google images. yippee!
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.46.1", features = ["rt", "macros"] }
tokio-stream = "0.1.17"
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
urlencoding = "2.1.3"
